feat: dotenx extended installation

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js",
-    "build": "npm install"
+    "server": "nodemon server.js"
   },
   "author": "Wisdom Elue",
   "license": "ISC",
