--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.7.5",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
+    "redis": "^4.5.1",
     "ua-parser-js": "^1.0.32"
   }
 }
